# TissUUmaps

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  TissUUmaps.py  TissUUmaps.spec  build.ps1  build.sh  build_installer.iss  flasktissuumaps.py  flasktissuumaps.spec  pyproject.toml  setup.cfg  setup.py
.github/: generate_plugin_sites.py
container/: Dockerfile  Dockerfile_save  requirements.txt  start.sh  tissuumaps.cfg  uwsgi.ini
examples/: TileEffect1.ipynb  TileEffect2.ipynb  batch_convert_to_DZI.ipynb  breastcancer.ipynb  fiji_alignment_dot_extraction.py  giotto2tmap.py  pixel_decoding_starfish.ipynb  relabel.py  spage2vec_TM.ipynb  starfish2tmap.py  static-no-cors.ipynb  tissuumaps_cnn_example.ipynb
plugins/: ClassQC.js  ClassQC.py  ClassQC.yml  Feature_Space.js  Feature_Space.yml  Feature_Space_3D.txt  InteractionQC.js  InteractionQC.yml  Plot_Histogram.js  Plot_Histogram.txt  Plugin_template.js  Points2Regions.js  Points2Regions.py  Spot_Inspector.js  Spot_Inspector.py  Spot_Inspector.txt  Spot_Inspector.yml  index.html  pluginList.json
plugins_repo/: ClassQC.js  ClassQC.yml  Feature_Space.js  Feature_Space_3D.js  Feature_Space_3D.yml  InteractionQC.js  Plot_Histogram.js  Plugin_template.js  Plugin_template.py  Points2Regions.js  Points2Regions.py  Points2Regions.yml  Spot_Inspector.py  Spot_Inspector.yml  index.html
src/: TissUUmaps.py  TissUUmaps_flask.py  TissUUmaps_standalone.py  requirements.txt
standalone/: TissUUmaps.desktop  TissUUmaps.spec  build.ps1  build.sh  (+3 more)
(+197 files in other folders)
