[metadata]
name = TissUUmaps
version = file: tissuumaps/VERSION
author = Leslie Solorzano, Christophe Avenel, Fredrik Nysjö
author_email = christophe.avenel@it.uu.se
description = TissUUmaps is a lightweight viewer that uses basic web tools to visualize gene expression data or any kind of point data on top of whole slide images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://tissuumaps.github.io
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages =
    tissuumaps
python_requires = >=3.8
install_requires =
    Flask>=2.0.0
    openslide-python>=1.1.2
    Pillow>=8.2.0
    ipython>=7.0
    pyvips>=2.1.14
    pyyaml>=6.0
    h5py>=3.6.0
    scipy>=1.7.2

[options.entry_points]
console_scripts =
    tissuumaps_server = tissuumaps.__main__:main
    tissuumaps = tissuumaps.gui:main

[options.extras_require]
pyside6 =
    pyside6>=6.5.3
    pyside6-addons>=6.5.3
full =
    pyside6>=6.5.3
    pyside6-addons>=6.5.3

[flake8]
max-line-length = 88
extend-ignore = E203
